--- a/Final Portfolio/style-index.css
+++ b/Final Portfolio/style-index.css
@@ -123,7 +123,7 @@ button.game-style:hover span {
   background-color: #F6DCAC;
   color: black;
   font-family: "Kanit", sans-serif;
-  padding: 0 15%;
+  padding: 5px 15%;
 }
 
 .feature-box{
