--- a/Final Portfolio/style-project.css
+++ b/Final Portfolio/style-project.css
@@ -38,7 +38,7 @@ h3{
   background-color: #F6DCAC;
   color: black;
   font-family: "Kanit", sans-serif;
-  padding: 0 15%;
+  padding: 5px 15%;
 }
 
 .feature-box{
